Correction du nom des routes dans SWAGGER
